<?xml version="1.0"?>
<package>
  <name>point_cloud_fusion</name>
  <version>0.0.0</version>
  <description>Package to fuse several point cloud together</description>
  <maintainer email="karrerm@student.ethz.ch">Marco Karrer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
</package>
